# JVAppeals2026

./: .gitignore  CLAUDE.md  CNAME  README.md  about.html  appeals.html  appraisals.html  featurelist.md  index.html  main.js  nav.js  playbook.html  pyproject.toml  report-pending.html  report.html  report.js  stats.html  stats.js  style.css
data/: parcels.json  reports.json
pipeline/: __main__.py  download.py  findings.py  hearings.py  load.py  mapdata.py  prose.py  render.py  reports_data.py
scripts/: run.sh
