[project]
name = "jvappeals2026"
version = "0.1.0"
description = "Jersey Village 2026 HCAD appeal report generator + map"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.1.0",
    "reportlab>=4.2.0",
]

[project.scripts]
jvappeals = "pipeline.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]
